# advent-of-code-2022

./: Cargo.toml
src/: _template.rs  day-01-1.rs  day-01-2.rs
