[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[[bin]]
name = "day-01-1"
path = "src/day-01-1.rs"

[[bin]]
name = "day-01-2"
path = "src/day-01-2.rs"

